# simplerenderer

./: CMakeLists.txt
.cache/clangd/index/: glad.c.E8BAABE39F73A5EA.idx  glad.h.E5101B3947D6CB59.idx  khrplatform.h.DEBCCF120C4D7297.idx  main.cpp.D3B6779730CF3226.idx
include/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp  shader.cpp  shader.hpp
